SERVER-23901 make write commands accept any type for bypassDocumentValidation